@@ -1,3 +1,8 @@
+11 June 2008
++ Added new cacheHeader function to retain javascript and css
+  information should a module return cached content before the above
+  can be established.
+
 Version 2.4.4
 ------------------------------------------------------------------
 4 June 2008
